--- a/back-office/assets/styles/custom.scss
+++ b/back-office/assets/styles/custom.scss
@@ -21,9 +21,17 @@ footer {
   padding: 20px;
 }
 
-.select-arrow {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  background-position: right 0.75rem center;
-  background-size: 16px 12px;
+.checkboxes-div {
+  max-height: 200px;
+  overflow: auto;
+  padding: 10px;
+  border-right: 1px solid rgba(0, 0, 0, 0.125);
+  border-left: 1px solid rgba(0, 0, 0, 0.125);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+.placeholder {
+  color: #6c757d;
+  user-select: none;
 }
