--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -16,8 +16,8 @@
         <div class="row">
             <div class="col-3">
                 <div class="form-select d-flex justify-content-start"
-                     data-action="click->question#showCheckboxes" data-checkboxes-for="categories">
-                    <span class="placeholder">Catégories</span>
+                     data-action="click->question#showCheckboxes" data-checkboxes-for="categories" data-filter-select>
+                    <span class="placeholder" data-click-not-hiding>Catégories</span>
                 </div>
                 <div id="categories" class="checkboxes-div d-none" data-click-not-hiding>
                     <div class="mb-2" data-click-not-hiding>
