Filter by array of categories

--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -36,9 +36,9 @@
                             Vider
                         </button>
                     </div>
-                    <div class="d-flex flex-wrap justify-content-between" data-click-not-hiding>
+                    <div class="d-flex flex-wrap justify-content-start" data-click-not-hiding>
                     {% for category in categories %}
-                        <label class="form-check-label mb-1" data-click-not-hiding>
+                        <label class="form-check-label mb-1 me-1" data-click-not-hiding>
                             <input type="checkbox"
                                    data-checkboxes="categories"
                                    class="form-check-input"
